Add Equipment entity, CRUD API, DTO, and filter by status/site

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=equipmentManager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/equipmentdb?createDatabaseIfNotExist=true
+spring.datasource.username=root555
+spring.datasource.password=root555
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
